--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mapbox-gl": "^1.8.1"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^2.3.1",
     "lr-http-server": "^0.1.5",
     "rollup": "^2.1.0",
     "rollup-plugin-commonjs": "^10.1.0",
