--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ typings/
 # Nuxt.js build / generate output
 .nuxt
 dist
+www
 
 # Gatsby files
 .cache/
@@ -102,3 +103,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Cordova
+platforms
+plugins
