--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "name": "soundscape-db",
+  "name": "net.wekaco.soundfield_db",
+  "displayName": "SoundFieldDb",
+  "author": "github.com/wekaco",
   "version": "0.0.1",
   "description": "Record sound scape",
   "main": "index.js",
@@ -7,21 +9,36 @@
   "scripts": {
     "watch": "./node_modules/.bin/rollup -c -w 'src/**'",
     "build": "./node_modules/.bin/rollup -c",
-    "dev": "./node_modules/.bin/lr-http-server --port 6060"
+    "dev": "./node_modules/.bin/lr-http-server --port 6060 -d www",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "cordova-ios": "^5.1.1",
     "kefir": "^3.8.6",
     "mapbox-gl": "^1.8.1",
     "uuid": "^7.0.2"
   },
+  "keywords": [
+    "ecosystem:cordova"
+  ],
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.1",
+    "cordova-plugin-whitelist": "^1.3.4",
     "lr-http-server": "^0.1.5",
     "rollup": "^2.1.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.3.0"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
